syntax = "proto3";

package raftpb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

// HardState is the current state of the Raft node.
// It must be stored in stable storage before messages are sent.
//
// (etcd raftpb.HardState)
message HardState {
	uint64 VotedFor       = 1;
	uint64 CommittedIndex = 2;
	uint64 Term           = 3;
}
